/**
 * This file is auto generated by tto v0.5.8 !
 * If you want to modify this code, please read the guide 
 * to modify code template.
 *
 * Get started: https://github.com/ixre/tto
 *
 * Copyright (C) 2009-2024 56X.NET, All rights reserved.
 *
 * name : invoice_tenant_service.proto
 * author : jarrysix
 * date : 2024/06/23 15:22:54
 * description :
 * history :
 */




syntax = "proto3";
option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

import "global.proto";

// 发票租户服务
service InvoiceService {
    // 获取发票租户
    rpc GetTenant(InvoiceTenantRequest)returns(SInvoiceTenant){}
    // 新增发票抬头
    rpc CreateInvoiceTitle (CreateInvoiceTitleRequest) returns (CreateInvoiceTitleResponse) {
    }
    // 保存发票
    rpc RequestInvoice (InvoiceRequest) returns (RequestInvoiceResponse) {
    }
    // 获取发票
    rpc GetInvoice (InvoiceId) returns (SInvoice) {
    }
    // Issue 开具发票,更新发票图片
    rpc Issue(InvoiceIssueRequest)returns (TxResult){}
    // Issue 发票开具失败
    rpc IssueFail(InvoiceIssueFailRequest)returns (TxResult){}
    // SendMail 发送发票到邮件中
    rpc SendMail(InvoiceSendMailRequest)returns (TxResult){}
    // Revert 撤销发票
    rpc Revert(InvoiceRevertRequest)returns (TxResult){}
}

// InvoiceIssueRequest 发票开具请求
message InvoiceIssueRequest{
    // 租户编号
    int64 tenantId = 1;
    // 发票ID
    int64 invoiceId = 2;
    // 发票代码
    string invoiceCode = 3;
    // 发票号码
    string invoiceNo = 4;
    // 开具备注/开票失败备注
    string issueRemark = 5;
    // 发票图片
    string invoicePic = 6;
}

// InvoiceIssueFailRequest 发票开具失败请求
message InvoiceIssueFailRequest{
    // 租户编号
    int64 tenantId = 1;
    // 发票ID
    int64 invoiceId = 2;
    // 失败原因
    string reason = 3;
}

// InvoiceSendMailRequest 发送发票到邮件中
message InvoiceSendMailRequest{
    // 租户编号
    int64 tenantId = 1;
    // 发票ID
    int64 invoiceId = 2;
    // 邮箱地址
    string email = 3;
}

// InvoiceRevertRequest 撤销发票
message InvoiceRevertRequest{
    // 租户编号
    int64 tenantId = 1;
    // 发票ID
    int64 invoiceId = 2;
    // 撤销原因
    string reason = 3; 
}

message InvoiceTenantRequest{
    // 租户类型,1:会员  2:商户
    int64 tenantType = 1;
    // 租户用户编号
    int64 tenantUid = 2;
}

// 发票租户
message SInvoiceTenant{
    // 错误码
    int32 code = 1;
    // 错误信息
    string msg = 2;
    // 租户编号
    int64 tenantId = 3; 
}

// 新增发票抬头请求
message CreateInvoiceTitleRequest{
    // 租户编号
    int64 tenantId = 2;
    // 发票类型: 1:增值税普通发票 2:增值税专用发票 3:形式发票
    int32 invoiceType = 3;
    // 开具类型, 1: 个人 2:企业
    int32 issueType = 4;
    // 抬头名称
    string titleName = 5;
    // 纳税人识别号
    string taxCode = 6;
    // 注册场所地址
    string signAddress = 7;
    // 注册固定电话
    string signTel = 8;
    // 基本户开户银行名
    string bankName = 9;
    // 基本户开户账号
    string bankAccount = 10;
    // 是否默认
    int32 isDefault = 12;
}

// 新增发票抬头响应
message CreateInvoiceTitleResponse{
    // 错误码
    int32 code = 1;
    // 错误信息
    string msg = 2;
    // 编号
    int64 id = 3;
}


// 保存发票请求
message InvoiceRequest{
    // 申请发票租户编号
    int64 tenantId = 1;
    // 开具租户编号
    int64 issueTenantId = 2;
    // 发票抬头编号
    int64 titleId = 3;
    // 发票内容
    string subject = 4;
    // 发票项目
    repeated SInvoiceItem items = 5;
    // 发票接收邮箱地址
    string receiveEmail = 6; 
    // 关联单据编号
    string outerNo = 7;
    // 备注
    string remark = 8;
}

// 保存发票响应
message RequestInvoiceResponse{
    // 错误码
    int32 code = 1;
    // 错误信息
    string msg = 2;
    // 发票ID
    int64 invoiceId = 3;
}

// 发票编号
message InvoiceId{
    // 租户编号
    int64 tenantId = 1;
    // 发票ID
    int64 invoiceId = 2;
 }
 
// 发票
message SInvoice{
    // 编号
    int64 id = 1;
    // 发票代码
    string invoiceCode = 2;
    // 发票号码
    string invoiceNo = 3;
    // 租户编号
    int64 tenantId = 4;
    // 开具租户编号
    int64 issueTenantId = 5;
    // 发票类型: 1:增值税普通发票 2:增值税专用发票 3:形式发票
    int32 invoiceType = 6;
    // 开具类型, 1: 个人 2:企业
    int32 issueType = 7;
    // 销售方名称
    string sellerName = 8;
    // 销售方纳税人识别号
    string sellerTaxCode = 9;
    // 买方名称
    string purchaserName = 10;
    // 买方纳税人识别号
    string purchaserTaxCode = 11;
    // 合计金额
    double invoiceAmount = 12;
    // 合计税额
    double taxAmount = 13;
    // 备注
    string remark = 14;
    // 开具备注/开票失败备注
    string issueRemark = 15;
    // 发票图片
    string invoicePic = 16;
    // 发票接收邮箱地址
    string receiveEmail = 17;
    // 发票状态,1:待开票 2:开票完成 3:未通过
    int32 invoiceStatus = 18;
    // 开票时间
    int64 invoiceTime = 19;
    // 创建时间
    int64 createTime = 20;
    // 更新时间
    int64 updateTime = 21;
    // 发票项目
    repeated SInvoiceItem items = 22;
}


// 发票项目
message SInvoiceItem{
    // 项目名称
    string itemName = 1;
    // 项目规格
    string itemSpec = 2;
    // 价格
    double price = 3;
    // 税率
    double taxRate = 4;
    // 数量
    int32 quantity = 5;
    // 计量单位
    string unit = 6;
}